tests/baselines/reference/genericCallWithObjectLiteralArgs.errors.txt
tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectLiteralArgs.ts(5,13): error TS2345: Argument of type '{ bar: 数字; baz: 文字; }' is not assignable to parameter of type '{ bar: 数字; baz: 数字; }'.
  Types of property 'baz' are incompatible.
    Type '文字' is not assignable to type '数字'.


==== tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectLiteralArgs.ts (1 errors) ====
    function foo<T>(x: { bar: T; baz: T }) {
        return x;
    }
    
    var r = foo({ bar: 1, baz: '' }); // error
                ~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ bar: 数字; baz: 文字; }' is not assignable to parameter of type '{ bar: 数字; baz: 数字; }'.
!!! error TS2345:   Types of property 'baz' are incompatible.
!!! error TS2345:     Type '文字' is not assignable to type '数字'.
    var r2 = foo({ bar: 1, baz: 1 }); // T = number
    var r3 = foo({ bar: foo, baz: foo }); // T = typeof foo
    var r4 = foo<Object>({ bar: 1, baz: '' }); // T = Object